# anonymization-poc

./: .env.example  .gitignore  ARCHITECTURE.md  LEIA-ME.md  QUICKSTART.md  README.md  SUMMARY.md  debug_spacy.py  pyproject.toml  requirements.txt
.github/workflows/: anonymize-demo.yml
config/: anonymization_config.yaml
docker/: docker-compose.yml  init-mongo.js  init-postgres-varied.sql  init-postgres.sql
src/anonymization_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: anonymize_mongodb.py  anonymize_postgresql.py  anonymizer.py
tests/: test_anonymizer.py  test_auto_detection.py  test_mongodb.py  test_phone_anonymization.py  test_postgresql.py
